Refactor knowledge management flows and UI