@@ -1,49 +1,47 @@
 package com.knowflow.service;
 
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.knowflow.common.BusinessException;
 import com.knowflow.common.PageResponse;
 import com.knowflow.dto.AskRequest;
 import com.knowflow.dto.DocumentAskRequest;
 import com.knowflow.dto.FeedbackRequest;
 import com.knowflow.dto.MultiKnowledgeAskRequest;
+import com.knowflow.entity.AiModelConfig;
 import com.knowflow.entity.ChatFeedback;
 import com.knowflow.entity.ChatMessage;
 import com.knowflow.entity.ChatMessageReference;
 import com.knowflow.entity.ChatSession;
-import com.knowflow.entity.AiModelConfig;
 import com.knowflow.entity.Document;
 import com.knowflow.entity.DocumentChunk;
 import com.knowflow.entity.KnowledgeBase;
+import com.knowflow.enums.AnswerType;
 import com.knowflow.enums.KnowledgeBaseStatus;
 import com.knowflow.enums.MessageRole;
-import com.knowflow.infrastructure.ai.EmbeddingClient;
+import com.knowflow.enums.NoAnswerReason;
 import com.knowflow.infrastructure.ai.LlmClient;
 import com.knowflow.mapper.ChatFeedbackRepository;
 import com.knowflow.mapper.ChatMessageReferenceRepository;
 import com.knowflow.mapper.ChatMessageRepository;
 import com.knowflow.mapper.ChatSessionRepository;
 import com.knowflow.mapper.DocumentChunkRepository;
-import com.knowflow.mapper.DocumentRepository;
 import com.knowflow.security.SecurityUtils;
-import com.knowflow.service.ConfigService;
-import com.knowflow.service.DocumentService;
-import com.knowflow.service.KnowledgeBaseService;
-import com.knowflow.service.LogService;
-import com.knowflow.service.RuntimeConfigService;
 import com.knowflow.vo.AskVO;
 import com.knowflow.vo.ChatMessageVO;
 import com.knowflow.vo.ChatSessionVO;
+import com.knowflow.vo.KnowledgeBaseVO;
 import com.knowflow.vo.ReferenceVO;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.util.Comparator;
+import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
+import java.util.Objects;
 import java.util.stream.Collectors;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.apache.pdfbox.pdmodel.PDDocument;
 import org.apache.pdfbox.pdmodel.PDPage;
 import org.apache.pdfbox.pdmodel.PDPageContentStream;
@@ -52,17 +50,21 @@ import org.apache.pdfbox.pdmodel.font.PDType1Font;
 import org.apache.poi.xwpf.usermodel.XWPFDocument;
 import org.apache.poi.xwpf.usermodel.XWPFParagraph;
 import org.apache.poi.xwpf.usermodel.XWPFRun;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
-
-
 
 @Service
 public class ChatService {
-    private static final String NO_EVIDENCE = "The current knowledge base has no sufficient evidence.";
     private static final Logger log = LoggerFactory.getLogger(ChatService.class);
+    private static final String NO_EVIDENCE_ANSWER = "当前知识库未找到足够相关资料，无法基于知识库回答。";
+    private static final String GENERAL_ANSWER_PREFIX = "以下回答未基于当前知识库资料：";
+    private static final double MIN_REFERENCE_SCORE = 0.70d;
+    private static final int MAX_REFERENCES = 3;
 
     private final KnowledgeBaseService knowledgeBaseService;
     private final DocumentService documentService;
@@ -71,14 +73,14 @@ public class ChatService {
     private final ChatMessageReferenceRepository referenceRepository;
     private final ChatFeedbackRepository feedbackRepository;
     private final DocumentChunkRepository chunkRepository;
-    private final DocumentRepository documentRepository;
-    private final EmbeddingClient embeddingClient;
     private final LlmClient llmClient;
     private final LogService logService;
     private final ConfigService configService;
     private final RuntimeConfigService runtimeConfigService;
+    private final RetrievalService retrievalService;
+    private final ObjectMapper objectMapper;
     private final int defaultTopK;
-    private final double defaultMinScore;
+    private final double defaultSimilarityThreshold;
 
     public ChatService(KnowledgeBaseService knowledgeBaseService,
                        DocumentService documentService,
@@ -87,14 +89,14 @@ public class ChatService {
                        ChatMessageReferenceRepository referenceRepository,
                        ChatFeedbackRepository feedbackRepository,
                        DocumentChunkRepository chunkRepository,
-                       DocumentRepository documentRepository,
-                       EmbeddingClient embeddingClient,
                        LlmClient llmClient,
                        LogService logService,
                        ConfigService configService,
                        RuntimeConfigService runtimeConfigService,
+                       RetrievalService retrievalService,
+                       ObjectMapper objectMapper,
                        @Value("${knowflow.rag.top-k}") int topK,
-                       @Value("${knowflow.rag.min-score}") double minScore) {
+                       @Value("${knowflow.rag.similarity-threshold:0.8}") double similarityThreshold) {
         this.knowledgeBaseService = knowledgeBaseService;
         this.documentService = documentService;
         this.sessionRepository = sessionRepository;
@@ -102,14 +104,14 @@ public class ChatService {
         this.referenceRepository = referenceRepository;
         this.feedbackRepository = feedbackRepository;
         this.chunkRepository = chunkRepository;
-        this.documentRepository = documentRepository;
-        this.embeddingClient = embeddingClient;
         this.llmClient = llmClient;
         this.logService = logService;
         this.configService = configService;
         this.runtimeConfigService = runtimeConfigService;
+        this.retrievalService = retrievalService;
+        this.objectMapper = objectMapper;
         this.defaultTopK = topK;
-        this.defaultMinScore = minScore;
+        this.defaultSimilarityThreshold = similarityThreshold;
     }
 
     @Transactional
@@ -117,7 +119,12 @@ public class ChatService {
         KnowledgeBase kb = requireUsableKnowledgeBase(request.knowledgeBaseId());
         Long userId = SecurityUtils.getCurrentUserId();
         ChatSession session = resolveSession(request.sessionId(), kb.getId(), userId, request.question());
-        return answer(userId, session, request.question(), retrieveByKnowledgeBases(userId, List.of(kb.getId()), request.question()));
+        RetrievalResult retrievalResult = retrieveByKnowledgeBases(userId, List.of(kb.getId()), request.question());
+        boolean allowGeneralAnswer = Boolean.TRUE.equals(request.allowGeneralAnswer());
+        NoAnswerReason emptyReason = kb.getDocumentCount() != null && kb.getDocumentCount() == 0
+                ? NoAnswerReason.EMPTY_KNOWLEDGE_BASE
+                : null;
+        return answer(userId, session, request.question(), retrievalResult, allowGeneralAnswer, emptyReason);
     }
 
     @Transactional
@@ -126,7 +133,10 @@ public class ChatService {
         Document document = documentService.requireOwned(request.documentId());
         requireUsableKnowledgeBase(document.getKnowledgeBaseId());
         ChatSession session = resolveSession(request.sessionId(), document.getKnowledgeBaseId(), userId, request.question());
-        return answer(userId, session, request.question(), retrieveByDocument(userId, request.documentId(), request.question()));
+        return answer(userId, session, request.question(),
+                retrieveByDocument(userId, request.documentId(), request.question()),
+                false,
+                null);
     }
 
     @Transactional
@@ -136,16 +146,25 @@ public class ChatService {
         if (kbIds.isEmpty()) {
             throw BusinessException.badRequest("knowledgeBaseIds cannot be empty");
         }
-        kbIds.forEach(this::requireUsableKnowledgeBase);
+        List<KnowledgeBase> knowledgeBases = kbIds.stream().map(this::requireUsableKnowledgeBase).toList();
         ChatSession session = resolveSession(request.sessionId(), kbIds.get(0), userId, request.question());
-        return answer(userId, session, request.question(), retrieveByKnowledgeBases(userId, kbIds, request.question()));
+        int totalDocumentCount = knowledgeBases.stream()
+                .map(KnowledgeBase::getDocumentCount)
+                .filter(Objects::nonNull)
+                .mapToInt(Integer::intValue)
+                .sum();
+        boolean emptyKnowledgeBase = totalDocumentCount == 0;
+        return answer(userId, session, request.question(),
+                retrieveByKnowledgeBases(userId, kbIds, request.question()),
+                false,
+                emptyKnowledgeBase ? NoAnswerReason.EMPTY_KNOWLEDGE_BASE : null);
     }
 
     public PageResponse<ChatSessionVO> sessions(int pageNo, int pageSize) {
         Long userId = SecurityUtils.getCurrentUserId();
         Page<ChatSession> page = sessionRepository.findByUserIdAndDeletedFalse(userId, new Page<>(pageNo, pageSize));
         Map<Long, String> kbNames = knowledgeBaseService.page("", 1, 1000, "updateTime").list().stream()
-                .collect(Collectors.toMap(com.knowflow.vo.KnowledgeBaseVO::id, com.knowflow.vo.KnowledgeBaseVO::name));
+                .collect(Collectors.toMap(KnowledgeBaseVO::id, KnowledgeBaseVO::name));
         return PageResponse.of(page.convert(session -> {
             List<ChatMessage> sessionMessages = messagesForSession(userId, session.getId());
             String latestQuestion = sessionMessages.stream()
@@ -153,10 +172,17 @@ public class ChatService {
                     .reduce((a, b) -> b)
                     .map(ChatMessage::getContent)
                     .orElse("");
-            return new ChatSessionVO(session.getId(), session.getKnowledgeBaseId(),
+            return new ChatSessionVO(
+                    session.getId(),
+                    session.getKnowledgeBaseId(),
                     kbNames.getOrDefault(session.getKnowledgeBaseId(), ""),
-                    session.getTitle(), latestQuestion, (long) sessionMessages.size(),
-                    session.getCreateTime(), session.getUpdateTime(), session.getUpdateTime());
+                    session.getTitle(),
+                    latestQuestion,
+                    (long) sessionMessages.size(),
+                    session.getCreateTime(),
+                    session.getUpdateTime(),
+                    session.getUpdateTime()
+            );
         }));
     }
 
@@ -164,14 +190,37 @@ public class ChatService {
         Long userId = SecurityUtils.getCurrentUserId();
         requireSession(sessionId, userId);
         return messagesForSession(userId, sessionId).stream()
-                .map(message -> new ChatMessageVO(
-                        message.getId(),
-                        message.getRole(),
-                        message.getContent(),
-                        message.getModelName(),
-                        message.getCreateTime(),
-                        referenceRepository.findByUserIdAndMessageIdAndDeletedFalse(userId, message.getId()).stream().map(ReferenceVO::from).toList()
-                ))
+                .map(message -> {
+                    if (message.getRole() != MessageRole.ASSISTANT) {
+                        return new ChatMessageVO(
+                                message.getId(),
+                                message.getRole(),
+                                message.getContent(),
+                                message.getModelName(),
+                                null,
+                                Boolean.FALSE,
+                                message.getCreateTime(),
+                                Collections.emptyList()
+                        );
+                    }
+
+                    List<ReferenceVO> references = readMessageReferences(userId, message);
+                    String answerType = resolveHistoryAnswerType(message, references);
+                    Boolean canUseGeneralAnswer = message.getCanUseGeneralAnswer();
+                    if (canUseGeneralAnswer == null) {
+                        canUseGeneralAnswer = AnswerType.NO_CONTEXT.name().equals(answerType);
+                    }
+                    return new ChatMessageVO(
+                            message.getId(),
+                            message.getRole(),
+                            message.getContent(),
+                            message.getModelName(),
+                            answerType,
+                            canUseGeneralAnswer,
+                            message.getCreateTime(),
+                            references
+                    );
+                })
                 .toList();
     }
 
@@ -209,7 +258,10 @@ public class ChatService {
                 .reduce((a, b) -> b)
                 .map(ChatMessage::getContent)
                 .orElseThrow(() -> BusinessException.badRequest("no question to regenerate"));
-        return answer(userId, session, lastQuestion, retrieveByKnowledgeBases(userId, List.of(session.getKnowledgeBaseId()), lastQuestion));
+        return answer(userId, session, lastQuestion,
+                retrieveByKnowledgeBases(userId, List.of(session.getKnowledgeBaseId()), lastQuestion),
+                false,
+                null);
     }
 
     @Transactional
@@ -294,34 +346,231 @@ public class ChatService {
         }
     }
 
-    private AskVO answer(Long userId, ChatSession session, String question, List<ScoredChunk> scoredChunks) {
-        saveMessage(userId, session.getId(), MessageRole.USER, question, null);
-        String answer;
-        AiModelConfig modelConfig = configService.requireEnabledLlmConfig();
-        boolean hasApiKey = StringUtils.hasText(modelConfig.getApiKey());
-        String modelType = StringUtils.hasText(modelConfig.getModelType())
-                ? modelConfig.getModelType().toUpperCase()
-                : (modelConfig.getModelName() != null && modelConfig.getModelName().toLowerCase().contains("embedding") ? "EMBEDDING" : "LLM");
-        log.debug("Chat selectedModelId={}, provider={}, modelType={}, modelName={}, baseUrl={}, hasApiKey={}",
-                modelConfig.getId(), modelConfig.getProvider(), modelType, modelConfig.getModelName(), modelConfig.getBaseUrl(), hasApiKey);
-        if (scoredChunks.isEmpty()) {
-            answer = NO_EVIDENCE;
-        } else {
+    private AskVO answer(Long userId,
+                         ChatSession session,
+                         String question,
+                         RetrievalResult retrievalResult,
+                         boolean allowGeneralAnswer,
+                         NoAnswerReason preferredNoAnswerReason) {
+        saveMessage(userId, session.getId(), MessageRole.USER, question, null, null, Boolean.FALSE, Collections.emptyList());
+
+        double threshold = similarityThreshold();
+        double evidenceThreshold = Math.max(threshold, MIN_REFERENCE_SCORE);
+
+        List<ScoredChunk> sortedChunks = retrievalResult.scoredChunks().stream()
+                .sorted((a, b) -> Double.compare(b.finalScore(), a.finalScore()))
+                .toList();
+        List<ScoredChunk> validChunks = sortedChunks.stream()
+                .filter(chunk -> chunk.finalScore() >= MIN_REFERENCE_SCORE)
+                .limit(MAX_REFERENCES)
+                .toList();
+        int filteredLowScoreCount = Math.max(0, sortedChunks.size() - validChunks.size());
+        boolean hasChunks = retrievalResult.totalChunks() > 0;
+        boolean hasReliableEvidence = !validChunks.isEmpty()
+                && (retrievalResult.hasStrongKeywordHit() || retrievalResult.maxFinalScore() >= evidenceThreshold);
+
+        log.debug("Chat retrieval summary: query='{}', knowledgeBaseId={}, retrievalTopK={}, similarityThreshold={}, validReferencesCount={}, filteredLowScoreReferencesCount={}",
+                question, session.getKnowledgeBaseId(), topK(), evidenceThreshold, validChunks.size(), filteredLowScoreCount);
+
+        if (!hasReliableEvidence) {
+            NoAnswerReason noAnswerReason = !hasChunks
+                    ? (preferredNoAnswerReason == null ? NoAnswerReason.NO_CHUNKS : preferredNoAnswerReason)
+                    : NoAnswerReason.LOW_SIMILARITY;
+
+            if (!allowGeneralAnswer) {
+                ChatMessage assistantMessage = saveMessage(
+                        userId,
+                        session.getId(),
+                        MessageRole.ASSISTANT,
+                        NO_EVIDENCE_ANSWER,
+                        null,
+                        AnswerType.NO_CONTEXT,
+                        Boolean.TRUE,
+                        Collections.emptyList()
+                );
+                log.debug("Chat answerType={}, canUseGeneralAnswer={}, valid references forced empty",
+                        AnswerType.NO_CONTEXT.name(), true);
+                return new AskVO(
+                        session.getId(),
+                        question,
+                        NO_EVIDENCE_ANSWER,
+                        AnswerType.NO_CONTEXT.name(),
+                        true,
+                        assistantMessage.getId(),
+                        Collections.emptyList(),
+                        false,
+                        false,
+                        noAnswerReason.name()
+                );
+            }
+
+            AiModelConfig modelConfig = configService.requireEnabledLlmConfig();
+            String modelName = modelConfig.getModelName();
+            String prompt = "User question: " + question + "\nPlease provide a concise and safe general answer.";
             long start = System.currentTimeMillis();
+            String answer;
             try {
-                answer = llmClient.complete(buildPrompt(question, scoredChunks, session.getId(), userId), modelConfig);
-                logService.recordAiCall(userId, modelConfig.getModelName(), "CHAT", System.currentTimeMillis() - start, true, null);
+                answer = GENERAL_ANSWER_PREFIX + "\n" + llmClient.complete(prompt, modelConfig);
+                logService.recordAiCall(
+                        userId, session.getKnowledgeBaseId(), session.getId(), modelConfig.getModelName(),
+                        resolveModelType(modelConfig), modelConfig.getProvider(), "QA",
+                        System.currentTimeMillis() - start, true, null, estimateTokens(prompt), estimateTokens(answer)
+                );
             } catch (RuntimeException ex) {
-                logService.recordAiCall(userId, modelConfig.getModelName(), "CHAT", System.currentTimeMillis() - start, false, ex.getMessage());
+                logService.recordAiCall(
+                        userId, session.getKnowledgeBaseId(), session.getId(), modelConfig.getModelName(),
+                        resolveModelType(modelConfig), modelConfig.getProvider(), "QA",
+                        System.currentTimeMillis() - start, false, ex.getMessage(), estimateTokens(prompt), null
+                );
                 throw ex;
             }
+            ChatMessage assistantMessage = saveMessage(
+                    userId,
+                    session.getId(),
+                    MessageRole.ASSISTANT,
+                    answer,
+                    modelName,
+                    AnswerType.GENERAL,
+                    Boolean.FALSE,
+                    Collections.emptyList()
+            );
+            log.debug("Chat answerType={}, canUseGeneralAnswer={}, valid references forced empty",
+                    AnswerType.GENERAL.name(), false);
+            return new AskVO(
+                    session.getId(),
+                    question,
+                    answer,
+                    AnswerType.GENERAL.name(),
+                    false,
+                    assistantMessage.getId(),
+                    Collections.emptyList(),
+                    false,
+                    false,
+                    noAnswerReason.name()
+            );
         }
-        ChatMessage assistantMessage = saveMessage(userId, session.getId(), MessageRole.ASSISTANT, answer, modelConfig.getModelName());
-        List<ReferenceVO> references = scoredChunks.stream()
-                .map(scored -> saveReference(userId, assistantMessage.getId(), scored))
-                .map(ReferenceVO::from)
+
+        AiModelConfig modelConfig = configService.requireEnabledLlmConfig();
+        boolean hasApiKey = StringUtils.hasText(modelConfig.getApiKey());
+        log.debug("Chat selectedModelId={}, provider={}, modelType={}, modelName={}, baseUrl={}, hasApiKey={}",
+                modelConfig.getId(), modelConfig.getProvider(), resolveModelType(modelConfig), modelConfig.getModelName(),
+                modelConfig.getBaseUrl(), hasApiKey);
+
+        String prompt = buildPrompt(question, validChunks, session.getId(), userId);
+        long start = System.currentTimeMillis();
+        String answer;
+        try {
+            answer = llmClient.complete(prompt, modelConfig);
+            logService.recordAiCall(
+                    userId, session.getKnowledgeBaseId(), session.getId(), modelConfig.getModelName(),
+                    resolveModelType(modelConfig), modelConfig.getProvider(), "QA",
+                    System.currentTimeMillis() - start, true, null, estimateTokens(prompt), estimateTokens(answer)
+            );
+        } catch (RuntimeException ex) {
+            logService.recordAiCall(
+                    userId, session.getKnowledgeBaseId(), session.getId(), modelConfig.getModelName(),
+                    resolveModelType(modelConfig), modelConfig.getProvider(), "QA",
+                    System.currentTimeMillis() - start, false, ex.getMessage(), estimateTokens(prompt), null
+            );
+            throw ex;
+        }
+
+        List<ReferenceVO> responseReferences = validChunks.stream()
+                .map(this::toRetrievedReference)
                 .toList();
-        return new AskVO(session.getId(), question, answer, assistantMessage.getId(), references);
+        responseReferences.forEach(reference -> log.debug(
+                "Chat valid reference: chunkIndex={}, score={}, hitReason={}, snippet={}",
+                reference.chunkIndex(), reference.finalScore(), reference.hitReason(), brief(reference.content(), 100)));
+
+        ChatMessage assistantMessage = saveMessage(
+                userId,
+                session.getId(),
+                MessageRole.ASSISTANT,
+                answer,
+                modelConfig.getModelName(),
+                AnswerType.RAG,
+                Boolean.FALSE,
+                responseReferences
+        );
+        validChunks.forEach(scored -> saveReference(userId, assistantMessage.getId(), scored));
+
+        log.debug("Chat answerType={}, canUseGeneralAnswer={}, retrievalTopK={}, validReferencesCount={}, filteredLowScoreReferencesCount={}",
+                AnswerType.RAG.name(), false, topK(), responseReferences.size(), filteredLowScoreCount);
+        return new AskVO(
+                session.getId(),
+                question,
+                answer,
+                AnswerType.RAG.name(),
+                false,
+                assistantMessage.getId(),
+                responseReferences,
+                true,
+                true,
+                null
+        );
+    }
+
+    private List<ReferenceVO> readMessageReferences(Long userId, ChatMessage message) {
+        List<ChatMessageReference> refs = referenceRepository.findByUserIdAndMessageIdAndDeletedFalse(userId, message.getId());
+        if (CollectionUtils.isEmpty(refs)) {
+            return parseReferencesJson(message.getReferencesJson());
+        }
+        List<Long> chunkIds = refs.stream()
+                .map(ChatMessageReference::getChunkId)
+                .filter(Objects::nonNull)
+                .distinct()
+                .toList();
+        Map<Long, Integer> chunkIndexMap = CollectionUtils.isEmpty(chunkIds)
+                ? Collections.emptyMap()
+                : chunkRepository.selectBatchIds(chunkIds).stream()
+                .collect(Collectors.toMap(DocumentChunk::getId, DocumentChunk::getChunkIndex, (a, b) -> a));
+        return refs.stream()
+                .map(ref -> ReferenceVO.from(ref, chunkIndexMap.get(ref.getChunkId())))
+                .toList();
+    }
+
+    private List<ReferenceVO> parseReferencesJson(String referencesJson) {
+        if (!StringUtils.hasText(referencesJson)) {
+            return Collections.emptyList();
+        }
+        try {
+            return objectMapper.readValue(
+                    referencesJson,
+                    objectMapper.getTypeFactory().constructCollectionType(List.class, ReferenceVO.class));
+        } catch (Exception ex) {
+            log.warn("Failed to parse message references json, fallback to empty list: {}", ex.getMessage());
+            return Collections.emptyList();
+        }
+    }
+
+    private String resolveHistoryAnswerType(ChatMessage message, List<ReferenceVO> references) {
+        if (message.getAnswerType() != null) {
+            return message.getAnswerType().name();
+        }
+        if (!CollectionUtils.isEmpty(references)) {
+            return AnswerType.RAG.name();
+        }
+        if (StringUtils.hasText(message.getContent()) && message.getContent().startsWith(GENERAL_ANSWER_PREFIX)) {
+            return AnswerType.GENERAL.name();
+        }
+        if (StringUtils.hasText(message.getContent()) && message.getContent().contains("未找到足够相关资料")) {
+            return AnswerType.NO_CONTEXT.name();
+        }
+        return AnswerType.RAG.name();
+    }
+
+    private ReferenceVO toRetrievedReference(ScoredChunk scored) {
+        DocumentChunk chunk = scored.chunk();
+        return ReferenceVO.fromRetrievedChunk(new ReferenceVO.RetrievalReference(
+                chunk.getDocumentId(),
+                scored.documentName(),
+                chunk.getId(),
+                chunk.getChunkIndex(),
+                scored.vectorId(),
+                chunk.getContent(),
+                roundScore(scored.finalScore()),
+                scored.hitReason()
+        ));
     }
 
     private KnowledgeBase requireUsableKnowledgeBase(Long id) {
@@ -345,7 +594,7 @@ public class ChatService {
         session.setKnowledgeBaseId(knowledgeBaseId);
         String normalizedTitle = StringUtils.hasText(question) ? question.trim() : "";
         if (!StringUtils.hasText(normalizedTitle)) {
-            normalizedTitle = "新会话";
+            normalizedTitle = "New Session";
         }
         session.setTitle(normalizedTitle.length() > 20 ? normalizedTitle.substring(0, 20) : normalizedTitle);
         sessionRepository.insert(session);
@@ -361,7 +610,14 @@ public class ChatService {
         return messageRepository.findByUserIdAndSessionIdAndDeletedFalseOrderByCreateTimeAsc(userId, sessionId);
     }
 
-    private ChatMessage saveMessage(Long userId, Long sessionId, MessageRole role, String content, String modelName) {
+    private ChatMessage saveMessage(Long userId,
+                                    Long sessionId,
+                                    MessageRole role,
+                                    String content,
+                                    String modelName,
+                                    AnswerType answerType,
+                                    Boolean canUseGeneralAnswer,
+                                    List<ReferenceVO> references) {
         ChatMessage message = new ChatMessage();
         message.setUserId(userId);
         message.setSessionId(sessionId);
@@ -369,41 +625,84 @@ public class ChatService {
         message.setContent(content);
         message.setModelName(modelName);
         message.setTokenCount(Math.max(1, content.length() / 2));
+        message.setAnswerType(answerType);
+        message.setCanUseGeneralAnswer(canUseGeneralAnswer);
+        message.setReferencesJson(writeReferencesJson(references));
         messageRepository.insert(message);
         return message;
     }
 
-    private List<ScoredChunk> retrieveByKnowledgeBases(Long userId, List<Long> knowledgeBaseIds, String question) {
-        double[] query = embeddingClient.embed(question);
-        Set<Long> allowed = Set.copyOf(knowledgeBaseIds);
-        List<DocumentChunk> chunks = knowledgeBaseIds.stream()
-                .flatMap(kbId -> chunkRepository.findByUserIdAndKnowledgeBaseIdAndDeletedFalse(userId, kbId).stream())
-                .filter(chunk -> allowed.contains(chunk.getKnowledgeBaseId()))
-                .toList();
-        return scoreChunks(query, chunks);
-    }
-
-    private List<ScoredChunk> retrieveByDocument(Long userId, Long documentId, String question) {
-        double[] query = embeddingClient.embed(question);
-        List<DocumentChunk> chunks = chunkRepository.findByDocumentIdAndDeletedFalseOrderByChunkIndexAsc(documentId).stream()
-                .filter(chunk -> userId.equals(chunk.getUserId()))
-                .toList();
-        return scoreChunks(query, chunks);
-    }
-
-    private List<ScoredChunk> scoreChunks(double[] query, List<DocumentChunk> chunks) {
-        if (chunks.isEmpty()) {
-            return List.of();
+    private String writeReferencesJson(List<ReferenceVO> references) {
+        List<ReferenceVO> safeReferences = references == null ? Collections.emptyList() : references;
+        try {
+            return objectMapper.writeValueAsString(safeReferences);
+        } catch (JsonProcessingException ex) {
+            log.warn("Failed to serialize message references json: {}", ex.getMessage());
+            return "[]";
         }
-        Map<Long, Document> documents = documentRepository.selectBatchIds(
-                chunks.stream().map(DocumentChunk::getDocumentId).collect(Collectors.toSet())
-        ).stream().collect(Collectors.toMap(Document::getId, d -> d));
-        return chunks.stream()
-                .map(chunk -> new ScoredChunk(chunk, documents.get(chunk.getDocumentId()), cosine(query, parseVector(chunk.getEmbedding()))))
-                .filter(scored -> scored.score() >= minScore())
-                .sorted(Comparator.comparing(ScoredChunk::score).reversed())
-                .limit(topK())
+    }
+
+    private RetrievalResult retrieveByKnowledgeBases(Long userId, List<Long> knowledgeBaseIds, String question) {
+        RetrievalService.RetrievalResult result = retrievalService.retrieveByKnowledgeBases(
+                knowledgeBaseIds, userId, question, topK(), "hybrid", similarityThreshold());
+        List<ScoredChunk> scoredChunks = result.chunks().stream()
+                .map(item -> new ScoredChunk(
+                        chunkRepository.selectById(item.chunkId()),
+                        item.documentName(),
+                        item.finalScore(),
+                        item.vectorId(),
+                        item.hitReason()))
+                .filter(item -> item.chunk() != null)
                 .toList();
+        Map<Long, Integer> chunkIndexMap = result.chunks().stream()
+                .filter(item -> item.chunkId() != null && item.chunkIndex() != null)
+                .collect(Collectors.toMap(RetrievalService.RetrievedChunk::chunkId, RetrievalService.RetrievedChunk::chunkIndex, (a, b) -> a));
+        double maxFinalScore = result.chunks().stream()
+                .mapToDouble(RetrievalService.RetrievedChunk::finalScore)
+                .max()
+                .orElse(0d);
+        return new RetrievalResult(
+                scoredChunks,
+                chunkIndexMap,
+                result.mergedResultsCount(),
+                result.keywordResultsCount(),
+                result.vectorResultsCount(),
+                result.mergedResultsCount(),
+                maxFinalScore,
+                result.hasStrongKeywordHit()
+        );
+    }
+
+    private RetrievalResult retrieveByDocument(Long userId, Long documentId, String question) {
+        Document document = documentService.requireOwned(documentId);
+        RetrievalService.RetrievalResult result = retrievalService.retrieveByDocument(
+                document.getKnowledgeBaseId(), userId, documentId, question, topK(), "hybrid", similarityThreshold());
+        List<ScoredChunk> scoredChunks = result.chunks().stream()
+                .map(item -> new ScoredChunk(
+                        chunkRepository.selectById(item.chunkId()),
+                        item.documentName(),
+                        item.finalScore(),
+                        item.vectorId(),
+                        item.hitReason()))
+                .filter(item -> item.chunk() != null)
+                .toList();
+        Map<Long, Integer> chunkIndexMap = result.chunks().stream()
+                .filter(item -> item.chunkId() != null && item.chunkIndex() != null)
+                .collect(Collectors.toMap(RetrievalService.RetrievedChunk::chunkId, RetrievalService.RetrievedChunk::chunkIndex, (a, b) -> a));
+        double maxFinalScore = result.chunks().stream()
+                .mapToDouble(RetrievalService.RetrievedChunk::finalScore)
+                .max()
+                .orElse(0d);
+        return new RetrievalResult(
+                scoredChunks,
+                chunkIndexMap,
+                result.mergedResultsCount(),
+                result.keywordResultsCount(),
+                result.vectorResultsCount(),
+                result.mergedResultsCount(),
+                maxFinalScore,
+                result.hasStrongKeywordHit()
+        );
     }
 
     private ChatMessageReference saveReference(Long userId, Long messageId, ScoredChunk scored) {
@@ -412,9 +711,9 @@ public class ChatService {
         reference.setMessageId(messageId);
         reference.setDocumentId(scored.chunk().getDocumentId());
         reference.setChunkId(scored.chunk().getId());
-        reference.setDocumentName(scored.document() == null ? "" : scored.document().getName());
+        reference.setDocumentName(scored.documentName() == null ? "" : scored.documentName());
         reference.setContent(scored.chunk().getContent());
-        reference.setScore(scored.score());
+        reference.setScore(roundScore(scored.finalScore()));
         referenceRepository.insert(reference);
         return reference;
     }
@@ -433,39 +732,13 @@ public class ChatService {
                 + "\n\nDocument chunks:\n" + context;
     }
 
-    private double[] parseVector(String text) {
-        if (text == null || text.isBlank()) {
-            return new double[0];
-        }
-        String[] parts = text.split(",");
-        double[] vector = new double[parts.length];
-        for (int i = 0; i < parts.length; i++) {
-            vector[i] = Double.parseDouble(parts[i]);
-        }
-        return vector;
-    }
-
-    private double cosine(double[] a, double[] b) {
-        if (a.length == 0 || b.length == 0 || a.length != b.length) {
-            return 0;
-        }
-        double dot = 0;
-        double na = 0;
-        double nb = 0;
-        for (int i = 0; i < a.length; i++) {
-            dot += a[i] * b[i];
-            na += a[i] * a[i];
-            nb += b[i] * b[i];
-        }
-        return na == 0 || nb == 0 ? 0 : dot / (Math.sqrt(na) * Math.sqrt(nb));
-    }
-
     private int topK() {
         return runtimeConfigService.intValue("rag.topK", defaultTopK);
     }
 
-    private double minScore() {
-        return runtimeConfigService.doubleValue("rag.minScore", defaultMinScore);
+    private double similarityThreshold() {
+        return runtimeConfigService.doubleValue("rag.similarityThreshold",
+                runtimeConfigService.doubleValue("rag.minScore", defaultSimilarityThreshold));
     }
 
     private String sanitizePdfLine(String line) {
@@ -473,6 +746,50 @@ public class ChatService {
         return ascii.length() > 100 ? ascii.substring(0, 100) : ascii;
     }
 
-    private record ScoredChunk(DocumentChunk chunk, Document document, double score) {
+    private String resolveModelType(AiModelConfig config) {
+        if (StringUtils.hasText(config.getModelType())) {
+            return config.getModelType().toUpperCase();
+        }
+        String modelName = config.getModelName() == null ? "" : config.getModelName().toLowerCase();
+        return modelName.contains("embedding") ? "EMBEDDING" : "LLM";
+    }
+
+    private Integer estimateTokens(String text) {
+        if (!StringUtils.hasText(text)) {
+            return 0;
+        }
+        return Math.max(1, text.length() / 4);
+    }
+
+    private Double roundScore(Double score) {
+        if (score == null) {
+            return null;
+        }
+        return BigDecimal.valueOf(score).setScale(4, RoundingMode.HALF_UP).doubleValue();
+    }
+
+    private String brief(String content, int maxLen) {
+        if (!StringUtils.hasText(content)) {
+            return "";
+        }
+        String normalized = content.replaceAll("\\s+", " ").trim();
+        return normalized.length() <= maxLen ? normalized : normalized.substring(0, maxLen);
+    }
+
+    private record ScoredChunk(DocumentChunk chunk,
+                               String documentName,
+                               double finalScore,
+                               String vectorId,
+                               String hitReason) {
+    }
+
+    private record RetrievalResult(List<ScoredChunk> scoredChunks,
+                                   Map<Long, Integer> chunkIndexMap,
+                                   int totalChunks,
+                                   int keywordResultsCount,
+                                   int vectorResultsCount,
+                                   int mergedResultsCount,
+                                   double maxFinalScore,
+                                   boolean hasStrongKeywordHit) {
     }
 }
